@@ -46,15 +46,17 @@ at IC&S, to join in developing DBMail further.
 
 In 2003 Ilja Booij joined IC&S to work on the 2.x version. During that time,
 Paul Stevens at NFG also joined the development team, initially to provide 
-debian packaging, later to take over development of the 2.1 release.
+debian packaging, later to take over development of the 2.1 release. Aaron
+Stone also deserves special thanks for initiating the LDAP driver, maintaining 
+the delivery chain and of course sieve support.
 
 DBMail is now a community effort to create a fast, effecient and scalable
 database driven mailingsystem. Both IC&S and NFG are fully behind 
 opensource and the GPL. Therefore DBMail has the GPL licence.
 
-However IC&S does provide commercial support and consultancy for this
+Both IC&S and NFG provide commercial support and consultancy for this
 product. For more information about this you can send an email to
-info@ic-s.nl.
+info@ic-s.nl and/or support@nfg.nl.
 
 ***
 Disclaimer: IC&S nor NFG are responsible for any damages resulting from use 
@@ -67,14 +69,13 @@ with more than 25.000 useraccounts. The system is stable.
 How do i install it?
 ====================
 
-Check the INSTALL file.
-
+Check the different README files and the wiki pages on dbmail.org for detailed 
+information and howtos.
 
 Future
 ======
 
 Check the website for further DBMail plans.
-
 
 What kind of licence is DBMail?
 ===============================
@@ -83,8 +84,7 @@ DBMail is used under the GPL+ licence.
 
 The + is that i would like to know how stuff is working out. So
 If you have DBMail running and you have like 1002919183 users, 
-i would want to know (to bragg about it ;).
-
+we would want to know about it (to bragg about it ;).
 
 The rest of the licence is described below:
 -------------------------------------------
